[package]
name = "rshy"
version = "5.0.5"
edition = "2024"
authors = ["yu13140 <whmyc801@gmail.com>"]
license = "CC BY-NC-SA 4.0"

[package.metadata.release]
debug = false

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[[bin]]
name = "encoder"
path = "src/bin/encoder.rs"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["std", "std_rng", "small_rng"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
term_size = { version = "0.3", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["stream", "json", "rustls-tls"] }
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-util"] }
indicatif = { version = "0.17", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
regex = { version = "1.10.4", default-features = false, features = ["std", "unicode-perl"] }
num_cpus = { version = "1.16.0", default-features = false }
rusqlite = { version = "0.29.0", default-features = false, features = ["bundled"] }
base64 = { version = "0.21", default-features = false }